# multi-line-string

./: README.md  multi-line-string.cabal
src/exe/: Main.hs
src/lib/: MultiLineString.hs
src/test/: Main.hs
